--- a/Source/CorreccionTesis/tesis.tex
+++ b/Source/CorreccionTesis/tesis.tex
@@ -1,5 +1,5 @@
 %\documentclass[a4paper,oneside,numbers,nobibtoc]{ezthesis}
-\documentclass[a4paper,oneside]{ezthesis}
+\documentclass[a4paper,oneside,spanish]{ezthesis}
 %\usepackage[a4paper]{geometry}
 %\usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \renewcommand{\baselinestretch}{1.5}
@@ -16,11 +16,13 @@
 % cuando se  está en un apéndice.  Eso se utiliza en  la definición de
 % las cabeceras.
 \usepackage{titlesec}
-\usepackage{amsfonts,amssymb,amsmath,amsthm}
+\usepackage{amsfonts,amssymb}
+\usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{enumerate}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
+\usepackage{amsthm}
 \usepackage{lipsum,multicol}
 %\usepackage{calligra}
 %\usepackage{calrsfs}
@@ -30,6 +32,7 @@
 %\usepackage{dsfont}
 \usepackage{filecontents}
 %\usepackage{verbatim}
+\usepackage{amssymb}
 \usepackage[T1]{fontenc}
 %\usepackage[numbers]{natbib}
 \usepackage{color}
@@ -53,7 +56,7 @@
 %\usepackage[active,pdftex,tightpage]{preview}
 %\usepackage{tikz-cd}
 
-
+\usepackage{apalike}
 
 \theoremstyle{definition}
 \newtheorem{definition}{Definición}[chapter] % esto es para que lo numere como : capitulo. definicion
@@ -273,6 +276,7 @@
 %% y un ejemplo.
 %\bibliographystyle{agsm}
 \addcontentsline{toc}{chapter}{Bibliografí­a}
+\bibliographystyle{agsm}
 \bibliography{../../Bibliography/bib_julia}
 \label{bibliografia}
 
